# get_system_error

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_run_tests.yml
include/Cool/: get_system_error.hpp  get_system_error_hresult.hpp
src/: get_system_error.cpp
tests/: CMakeLists.txt  tests.cpp
